--- a/html/exercises/index.html
+++ b/html/exercises/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>HTML Exercise</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <!-- DON'T TOUCH ANYTHING ABOVE THIS LINE -->
   </head>
   <body>
     <!-- h1 goes here -->
+    <h1>Why I Love Web Development</h1>
     <!-- ol goes here -->
+    <ol>
+      <li>It's challenging and stimulating.</li>
+      <li>It's a great career path.</li>
+      <li>It's fun!</li>
+    </ol>
     <!-- a goes here -->
+    <a href="https://github.com/KateFlann/">Go to my Github!</a>
     <!-- p goes here -->
+    <p>
+      With the powers I have obtained through the LaunchCode space shuttle
+      program, I hope to make the ultimate website to take over the world!!!!!!
+    </p>
   </body>
 </html>
