--- a/user-input-with-forms/exercises/index.html
+++ b/user-input-with-forms/exercises/index.html
@@ -1,14 +1,51 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Rocket Simulation</title>
     <style>
-      label { display: block; margin-bottom: 7px;}
+      label {
+        display: block;
+        margin-bottom: 7px;
+      }
     </style>
   </head>
   <body>
-    <!-- TODO: add form here -->
+    <form action="" method="POST">
+      <label>Test Name <input type="text" name="testName" /></label>
+      <label>Test Date <input type="date" name="testDate" /></label>
+      <label>Rocket Type  <select name="rocketType">
+        <option value="Brant">Brant</option>
+        <option value="Lynx">Lynx</option>
+        <option value="Orion">Orion</option>
+        <option value="Terrier">Terrier</option>
+        </select>
+      <label
+        >Number of Rocket Boosters <input type="number" name="boosterCount" min="1" max="9"
+      /></label>
+      <label>Wind Rating:
+        <label>No Wind<input type="radio" name="windRating" value="0"/></label>
+        <label>Mild<input type="radio" name="windRating" value="10"/></label>
+        <label>Strong<input type="radio" name="windRating" value="20"/></label> 
+      </label>
+      <label
+        >Use Production Grade Servers
+        <input type="checkbox" name="productionServers"
+      /></label>
+      <button>Run Simulation</button>
+    </form>
   </body>
-  
+  <!-- <script>
+    window.addEventListener("load", function() {
+        let form = document.querySelector("form");
+        form.addEventListener("submit", function(event) {
+        let usernameInput = document.querySelector("input[name=username]");
+        let teamName = document.querySelector("input[name=team]");
+        if (usernameInput.value === "" || teamName.value === "") {
+            alert("All fields are required!");
+            event.preventDefault();
+        }
+        });
+    });
+</script> -->
 </html>
